# discord-server-manager

./: .dockerignore  .sample.env  Cargo.toml  Dockerfile  old-dockerfile  start
.github/workflows/: ci.yml  rust.yml
src/: composite_event_handler.rs  config.rs  extractor.rs  main.rs  times.rs  user_roles.rs
src/time_converter/: message_handler.rs  mod.rs
src/time_converter/extractor/: current_time_extractor.rs  dynamic_time_extractor.rs  fixed_time_extractor.rs  mod.rs  time_extractor.rs  time_extractor_context.rs
src/time_converter/extractor/user/: user_reference_extractor.rs
src/time_converter/model/: mod.rs  time_components.rs
