[package]
name = "discord-server-manager"
version = "0.1.0"
authors = ["Connor Wenck <none@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.22"
regex = "1"
once_cell = "1.4.1"
chrono = "0.4"
chrono-tz = "0.5"
log = "0.4"
env_logger = "0.8"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
version = "0.9.0"
